--- a/style.css
+++ b/style.css
@@ -5,30 +5,43 @@
   padding: 0;
   box-sizing: border-box;
   border: none;
+}
+
+.wrapper {
   font-family: 'Open Sans', sans-serif;
   background: #f1f5f8;
   color: #102a42;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
 }
-
+/*-----------------------------------------------------------*/
 .password {
   display: grid;
-  grid-template-columns: 100%;
+  grid-template-columns: 1fr;
   grid-template-rows: 70% 30%;
   margin: 0 auto;
-  max-width: 600px;
+  width: 720px;
   min-height: 100vh;
   max-height: 100%;
-  background-color: #f1f5f8;
 }
 
 .password__parameter-section {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 50px 70px 70px 70px 70px 70px;
-  gap: 5px 0px;
+  grid-template-rows: 4rem 5rem 5rem 5rem 5rem;
+  gap: 0.1rem 0;
   margin: 5px;
 }
 
+.password__output-section {
+  min-width: 720px;
+  min-height: 100%;
+  max-height: 300px;
+  margin: auto 0 0 0;
+  border: 1px solid black;
+}
+/*-----------------------------------------------------------*/
 .password__length {
   display: grid;
   grid-template-columns: 350px 1fr 1fr 1fr;
@@ -50,12 +63,24 @@
 .length__button {
   font-size: 20px;
 }
-
+/*-----------------------------------------------------------*/
 .password__parameter {
   height: 70px;
-  border: 1px solid rgb(241, 27, 27);
+  border: 2px solid black;
 }
 
-.password__output-section {
-  border: 1px solid black;
+.password__parameter--off {
+  border-color: rgb(241, 27, 27);
+}
+
+.password__parameter--on {
+  border-color: green;
+}
+
+.parameter__title {
+  margin: 5px;
+}
+
+.output-section__result {
+  overflow-wrap: break-word;
 }
